fix banner on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -332,8 +332,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 100%;
-    /*height: 30px;*/
+    width: auto;
     max-height: 70vh;
     overflow-y: scroll;
     
